--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/prueba"
-    ali
+    android:orientation="vertical"
     tools:context=".login.SignUpActivity">
 
     <TextView
@@ -13,19 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Registro"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="35dp"
         android:textStyle="bold"
         android:layout_margin="50dp"
-        android:gravity="center"
+        android:gravity="center_horizontal"
        />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-
+        android:gravity="center_horizontal"
         />
-
-
 
 </LinearLayout>
