--- a/app/src/main/res/layout/activity_home_list.xml
+++ b/app/src/main/res/layout/activity_home_list.xml
@@ -6,8 +6,7 @@
     card_view:cardBackgroundColor="#E6E6E6"
     card_view:cardElevation="8dp"
     card_view:cardCornerRadius="10dp"
-    android:layout_margin="5dp"
-    >
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -21,16 +20,13 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="20sp"
-                android:padding="4dp" />
+                android:padding="4dp"/>
             <TextView
                 android:id="@+id/txtRegion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="15dp"
-                android:layout_margin="2dp"
-                android:padding="4dp" />
-
+                android:padding="4dp"/>
         </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
