--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,12 +16,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHouseGot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="605dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="10"
-        tools:listitem="@layout/activity_home_list"
-        />
+        tools:listitem="@layout/activity_home_list" />
 
+    <Button
+        android:id="@+id/btnNotificacion"
+        android:text="Habilitar notificacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 
 </LinearLayout>
